[gd_scene load_steps=4 format=3 uid="uid://dq736i3gd3u38"]

[ext_resource type="Script" path="res://scripts/Shield.gd" id="1_mumfo"]
[ext_resource type="AudioStream" uid="uid://cgc57edgx3gu1" path="res://assets/sounds/ShieldSound.mp3" id="2_5oeeq"]
[ext_resource type="Texture2D" uid="uid://cidj4ckrfti84" path="res://assets/projectiles/shield.png" id="3_bnyvc"]

[node name="Shield" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mumfo")

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 1.4
autostart = true

[node name="WooshSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5oeeq")
pitch_scale = 0.8
autoplay = true

[node name="Circle" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(2.988, 3)
texture = ExtResource("3_bnyvc")

[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
